--- a/app.json
+++ b/app.json
@@ -48,7 +48,7 @@
   ],
   "permission": {
     "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序定位"
+      "desc": "Your location information will be used for mini program positioning"
     }
   },
   "requiredPrivateInfos": [
